package the app